<resources>
    <string name="app_name">JetpackMVVM</string>
    <string name="integral_get_histort">积分获取记录</string>
    <string name="integral_rules">积分规则</string>
    <string name="search">搜索</string>


    <string name="bottom_name1">首页</string>
    <string name="bottom_name2">项目</string>
    <string name="bottom_name3">广场</string>
    <string name="bottom_name4">公众号</string>
    <string name="bottom_name5">我的</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="setting_base">基本设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_top">显示置顶文章</string>
    <string name="setting_toptip">开启后首页会显示置顶文章</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="clear_cache">清除缓存</string>
    <string name="setting_mode">列表动画</string>
    <string name="setting_modetip">无</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip">本App使用的Api均为 玩Android网站 提供，仅供于大家学习交流</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>
    <string name="author">作者</string>
    <string name="author_name">一个练习时长两年半的安卓开发者→_→</string>
    <string name="project_address">项目源码</string>
    <string name="github_url">https://github.com/hegaojian/JetpackMvvm</string>
    <string name="open_project">开源项目</string>
    <string name="open_project_tips">项目中用到的开源库</string>
    <string name="error_occurred">不好意思App翻车了。\n请拿已复制好的错误日志去啪啪啪得打作者的脸</string>
</resources>