<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.sunnyit.mvvm.app.weight.preference.PreferenceCategory
        android:key="base"
        android:title="@string/setting_base">

        <com.sunnyit.mvvm.app.weight.preference.CheckBoxPreference
            android:key="top"
            android:summary="@string/setting_toptip"
            android:title="@string/setting_top" />

        <Preference
            android:key="clearCache"
            android:title="@string/clear_cache" />

        <Preference
            android:key="exit"
            android:summary="退出登录"
            android:title="@string/setting_exit" />

    </com.sunnyit.mvvm.app.weight.preference.PreferenceCategory>

    <com.sunnyit.mvvm.app.weight.preference.PreferenceCategory
        android:key="other"
        android:title="@string/setting_other">

        <Preference
            android:key="mode"
            android:summary="@string/setting_modetip"
            android:title="@string/setting_mode" />

        <com.sunnyit.mvvm.app.weight.preference.IconPreference
            android:key="color"
            android:summary="@string/choose_theme_color_summary"
            android:title="@string/choose_theme_color" />

    </com.sunnyit.mvvm.app.weight.preference.PreferenceCategory>

    <com.sunnyit.mvvm.app.weight.preference.PreferenceCategory
        android:key="about"
        android:title="@string/setting_about">

        <Preference
            android:key="version"
            android:title="@string/setting_version" />

        <Preference
            android:key="author"
            android:summary="@string/author_name"
            android:title="@string/author" />

        <Preference
            android:key="project"
            android:summary="@string/github_url"
            android:title="@string/project_address" />

        <Preference
            android:key="open"
            android:summary="@string/open_project_tips"
            app:isPreferenceVisible="false"
            android:title="@string/open_project" />

        <Preference
            android:key="copyRight"
            android:summary="@string/copyright_summary"
            android:title="@string/copyright" />

    </com.sunnyit.mvvm.app.weight.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
